# INFO9023-MLSD-Project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  requirements-api.txt  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
docs/: API.md  DATA.md  DEPLOYMENT.md  EXPERIMENTATION.md  MONITORING.md  PIPELINE.md  SPEAKER_ENCODER.md
notebooks/model_training/vosk_speaker_recognition/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/model_training/vosk_speaker_recognition/.ipynb_checkpoints/: vosk_speaker_recognition-checkpoint.ipynb
notebooks/model_training/vosk_speaker_recognition/app/: speakers_embeddings_dev-clean.npz  vosk_speaker_recognition.ipynb
notebooks/model_training/vosk_speaker_recognition/app/.ipynb_checkpoints/: vosk_speaker_recognition-checkpoint.ipynb
src/: app.py  diarizer.py  extractor.py  gcs_download.py  gcs_upload.ipynb  hearEdit.py  speaker.py  speaker_embedding_threshold.py  threshold_dev-clean.json  train_speaker_pair_nn.py  transcriber.py  vosk_speaker_recognition_bs.ipynb
src/Ntrain/: train_speaker_pair_nn.py
src/cloud_data/: upload_data.ipynb
src/pipeline/: Dockerfile  config.py  data_preparation.py  evaluation.py  hearedit_pipeline.json  requirements-pipeline.txt  run_pipeline.py  test_local.py  threshold.py  training.py
src/streamlit/: Dockerfile  dashboard.py  pyproject.toml
src/templates/: index.html
src/training/: Dockerfile  gcs_download.py  pyproject.toml  speaker_embedding_threshold.py
tests/: test_utils.py
(+4 files in other folders)
