[project]
name = "vosk-speaker-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "jupyterlab>=4.5.5",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "vosk>=0.3.45",
]
