[project]
name = "vosk-speaker-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.3",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pbar>=1.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "vosk>=0.3.45",
]
